[package]
name = "terminator-dancer"
version = "0.1.0"
edition = "2021"
description = "A lightweight, high-performance Solana runtime built on Firedancer's foundation"
license = "Apache-2.0"
authors = ["Firedancer Contributors"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3"

# Real crypto dependencies (replacing stubs)
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
blake3 = "1.3"
rand = "0.8"

# Solana compatibility
borsh = { version = "1.0", features = ["derive"] }
bs58 = "0.5"
serde_with = "3.0"  # For big array support
serde_bytes = "0.11"  # For byte array support

# Performance and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.7"

# Testing dependencies
proptest = "1.0"
arbitrary = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
env_logger = "0.10"

[[bin]]
name = "terminator-dancer"
path = "src/main.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[bench]]
name = "transaction_processing"
harness = false

[lib]
name = "terminator_dancer"
path = "src/lib.rs"
